tests/liberr/liberr.exp
============================================
No warnings:
============================================
Error ---------------------------------------------------------------------------------------------- libs/exports.js:3:5

There can be at most one `declare module.exports` statement in a module. [duplicate-declare-module-exports]

   3|     declare module.exports: string; // error
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------------------- libs/exports.js:4:5

There can be at most one `declare module.exports` statement in a module. [duplicate-declare-module-exports]

   4|     declare module.exports: boolean; // error
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------------------- libs/exports.js:9:5

Unable to determine module type (CommonJS vs ES) if both an export statement and `module.exports` are used in the same
module! [module-type-conflict]

   9|     declare module.exports: number; // error
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------------------- libs/imports.js:3:1

Cannot use an import statement at the toplevel of a library file. Import statements may only appear inside a
`declare module`. The statement will be ignored. [toplevel-library-import]

   3| import type {t1} from 'm1'; // error toplevel import
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^


Error -------------------------------------------------------------------------------------------- libs/imports.js:13:27

Cannot resolve module `missing_module`. [cannot-resolve-module]

   13|     import type {t2} from 'missing_module'; // error missing module
                                 ^^^^^^^^^^^^^^^^


Error -------------------------------------------------------------------------------------------- libs/imports.js:20:14

Cannot extend `A` [1] with `D` because number [2] is incompatible with string [3] in the return value of property `m`.
[incompatible-extend]

   libs/imports.js:20:14
   20|         m(): number; // error number <: string
                    ^^^^^^ [2]

References:
   libs/imports.js:19:36
   19|     declare export class D extends A {
                                          ^ [1]
   libs/imports.js:7:14
    7|         m(): string;
                    ^^^^^^ [3]


Error ----------------------------------------------------------------------------------------------- libs/lints.js:3:18

Nonexistent/misspelled lint rule. Perhaps you have a missing/extra `,`? [lint-setting]

   3| /* flowlint-line unknown rule:off */ // unknown rule
                       ^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------------- libs/missing_name.js:13:6

Cannot resolve name `S`. [cannot-resolve-name]

   13|   s: S; // error, S is not defined
            ^


Error ------------------------------------------------------------------------------------------ libs/type_error.js:2:34

Cannot use type without exactly 1 type argument. [nonpolymorphic-type-app]

   2| declare function foo(x: number): Array;
                                       ^^^^^


Error -------------------------------------------------------------------------------------------------------- a.js:5:17

Cannot assign `0` to `x` because number [1] is incompatible with string [2]. [incompatible-type]

   a.js:5:17
   5| var x: string = 0;
                      ^ [1]

References:
   a.js:5:8
   5| var x: string = 0;
             ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------------- a.js:7:1

Cannot cast `require(...)` to empty because boolean [1] is incompatible with empty [2]. [incompatible-cast]

   a.js:7:1
   7| require('c') as empty; // error: boolean ~> empty
      ^^^^^^^^^^^^

References:
   libs/exports.js:4:29
   4|     declare module.exports: boolean; // error
                                  ^^^^^^^ [1]
   a.js:7:17
   7| require('c') as empty; // error: boolean ~> empty
                      ^^^^^ [2]



Found 11 errors

============================================
With warnings:
============================================
Error ---------------------------------------------------------------------------------------------- libs/exports.js:3:5

There can be at most one `declare module.exports` statement in a module. [duplicate-declare-module-exports]

   3|     declare module.exports: string; // error
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------------------- libs/exports.js:4:5

There can be at most one `declare module.exports` statement in a module. [duplicate-declare-module-exports]

   4|     declare module.exports: boolean; // error
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------------------- libs/exports.js:9:5

Unable to determine module type (CommonJS vs ES) if both an export statement and `module.exports` are used in the same
module! [module-type-conflict]

   9|     declare module.exports: number; // error
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------------------- libs/imports.js:3:1

Cannot use an import statement at the toplevel of a library file. Import statements may only appear inside a
`declare module`. The statement will be ignored. [toplevel-library-import]

   3| import type {t1} from 'm1'; // error toplevel import
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^


Error -------------------------------------------------------------------------------------------- libs/imports.js:13:27

Cannot resolve module `missing_module`. [cannot-resolve-module]

   13|     import type {t2} from 'missing_module'; // error missing module
                                 ^^^^^^^^^^^^^^^^


Error -------------------------------------------------------------------------------------------- libs/imports.js:20:14

Cannot extend `A` [1] with `D` because number [2] is incompatible with string [3] in the return value of property `m`.
[incompatible-extend]

   libs/imports.js:20:14
   20|         m(): number; // error number <: string
                    ^^^^^^ [2]

References:
   libs/imports.js:19:36
   19|     declare export class D extends A {
                                          ^ [1]
   libs/imports.js:7:14
    7|         m(): string;
                    ^^^^^^ [3]


Error ----------------------------------------------------------------------------------------------- libs/lints.js:3:18

Nonexistent/misspelled lint rule. Perhaps you have a missing/extra `,`? [lint-setting]

   3| /* flowlint-line unknown rule:off */ // unknown rule
                       ^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------------- libs/missing_name.js:13:6

Cannot resolve name `S`. [cannot-resolve-name]

   13|   s: S; // error, S is not defined
            ^


Error ------------------------------------------------------------------------------------------ libs/type_error.js:2:34

Cannot use type without exactly 1 type argument. [nonpolymorphic-type-app]

   2| declare function foo(x: number): Array;
                                       ^^^^^


Error -------------------------------------------------------------------------------------------------------- a.js:5:17

Cannot assign `0` to `x` because number [1] is incompatible with string [2]. [incompatible-type]

   a.js:5:17
   5| var x: string = 0;
                      ^ [1]

References:
   a.js:5:8
   5| var x: string = 0;
             ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------------- a.js:7:1

Cannot cast `require(...)` to empty because boolean [1] is incompatible with empty [2]. [incompatible-cast]

   a.js:7:1
   7| require('c') as empty; // error: boolean ~> empty
      ^^^^^^^^^^^^

References:
   libs/exports.js:4:29
   4|     declare module.exports: boolean; // error
                                  ^^^^^^^ [1]
   a.js:7:17
   7| require('c') as empty; // error: boolean ~> empty
                      ^^^^^ [2]


Warning -------------------------------------------------------------------------------------- libs/missing_name.js:10:3

Suppression is missing a code. Please update this suppression to use an error code: `$FlowFixMe[cannot-resolve-name]`

   10|   // $FlowFixMe
         ^^^^^^^^^^^^^



Found 11 errors and 1 warning
